added query revisor

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,86 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"  select * \\nfrom     data limit  1000  \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def queryRevisor(query: str):\n",
+    "    import re\n",
+    "\n",
+    "    query = \"\"\" select * \\nfrom  data limit 1000 \"\"\"\n",
+    "    result = re.sub(r'\\s+', ' ', query)\n",
+    "    return result.strip()\n",
+    "\n",
+    "\n",
+    "q = queryRevisor(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "limit = re.findall(r'limit\\s+([0-9]+)', q)\n",
+    "limit = limit[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['ELSE',\n",
-       " 'LIMIT',\n",
-       " 'CASE',\n",
-       " 'SELECT',\n",
-       " 'OR',\n",
-       " 'FROM',\n",
-       " 'GROUP BY',\n",
-       " 'OFFSET',\n",
-       " 'ORDER BY',\n",
-       " 'CREATE',\n",
-       " 'INNER JOIN',\n",
-       " 'IN',\n",
-       " 'HAVING',\n",
-       " 'DISTINCT',\n",
-       " 'NULL',\n",
-       " 'ON',\n",
-       " 'JOIN',\n",
-       " 'WHERE',\n",
-       " 'TABLE',\n",
-       " 'LEFT JOIN',\n",
-       " 'THEN',\n",
-       " 'RIGHT JOIN',\n",
-       " 'AND',\n",
-       " 'LIKE',\n",
-       " 'END',\n",
-       " 'BETWEEN',\n",
-       " 'NOT',\n",
-       " 'AS',\n",
-       " 'IS',\n",
-       " 'WHEN']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'schemas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mquery_revisor\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Revisor\n\u001b[0;32m      4\u001b[0m Revisor(query)\u001b[38;5;241m.\u001b[39mrun()\n",
+      "File \u001b[1;32md:\\code\\ParVu\\src\\query_revisor.py:4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Union\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mschemas\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m settings, BadQueryException\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mRevisor\u001b[39;00m:\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, query: \u001b[38;5;28mstr\u001b[39m):\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'schemas'"
+     ]
     }
    ],
    "source": [
-    "kws = \"['ELSE', 'LIMIT', 'CASE', 'SELECT', 'OR', 'FROM', 'GROUP BY', 'OFFSET', 'ORDER BY', 'CREATE', 'INNER JOIN', 'IN', 'HAVING', 'DISTINCT', 'NULL', 'ON', 'JOIN', 'WHERE', 'TABLE', 'LEFT JOIN', 'THEN', 'RIGHT JOIN', 'AND', 'LIKE', 'END', 'BETWEEN', 'NOT', 'AS', 'IS', 'WHEN']\"\n",
+    "from src.query_revisor import Revisor\n",
     "\n",
-    "kws = [i.strip().replace(\"'\", \"\") for i in kws[1:-1].split(',')]\n",
     "\n",
-    "\n"
+    "Revisor(query).run()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
