added table info btn

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -6,8 +6,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import duckdb\n",
     "import pandas as pd\n",
-    "import re"
+    "from io import StringIO\n",
+    "\n",
+    "# Connect to the DuckDB database\n",
+    "conn = duckdb.connect(':memory:')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_parquet(\"/home/anadirov/Documents/si.parquet\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def render_df_info(df: pd.DataFrame) -> str:\n",
+    "    buff = StringIO()\n",
+    "    df.info(buf=buff)\n",
+    "    info_str = buff.getvalue()\n",
+    "    lines = info_str.split(\"\\n\")\n",
+    "    shape = f\"#### Rows{df.shape[0]}, Columns: {df.shape[1]}\"\n",
+    "    column_lines = lines[5:27]\n",
+    "    markdown_table = \"| # | Column | Non-Null Count | Dtype |\\n\"\n",
+    "    markdown_table += \"|---|--------|----------------|-------|\\n\"\n",
+    "\n",
+    "    # Iterate over the column lines and extract the details\n",
+    "    for line in column_lines:\n",
+    "        parts = line.split()\n",
+    "        index = parts[0]\n",
+    "        column = \" \".join(parts[1:-3])\n",
+    "        non_null_count = parts[-3]\n",
+    "        dtype = parts[-1]\n",
+    "        \n",
+    "        # Add the row to the markdown table\n",
+    "        markdown_table += f\"| {index} | {column} | {non_null_count} | {dtype} |\\n\"\n",
+    "\n",
+    "    return f\"{shape}\\n{markdown_table}\"\n"
    ]
   },
   {
@@ -15,59 +58,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "query = \"\"\"  select * \\nfrom     data limit  1000  \"\"\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def queryRevisor(query: str):\n",
-    "    import re\n",
-    "\n",
-    "    query = \"\"\" select * \\nfrom  data limit 1000 \"\"\"\n",
-    "    result = re.sub(r'\\s+', ' ', query)\n",
-    "    return result.strip()\n",
-    "\n",
-    "\n",
-    "q = queryRevisor(query)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "limit = re.findall(r'limit\\s+([0-9]+)', q)\n",
-    "limit = limit[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "Path('D:\\\\code\\\\ParVu\\\\dist\\\\ParVu\\\\src\\\\history\\\\recents.json').exists()\n",
-    "Path(Path(\"d:\\\\code\\\\ParVu\\\\src\\\\settings\\\\default_settings.json\").as_posix()).exists()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -86,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
