--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import duckdb\n",
     "import pandas as pd\n",
-    "from io import StringIO\n",
     "import pyarrow.parquet as pq\n",
+    "from itertools import islice\n",
     "\n",
     "# Connect to the DuckDB database\n",
     "conn = duckdb.connect(':memory:')"
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,131 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>item_id</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>rank_ctb</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>33894709</th>\n",
-       "      <td>190308</td>\n",
-       "      <td>42c59b1f-7e5f-498a-b796-cdb96f1c74f2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33893901</th>\n",
-       "      <td>249520</td>\n",
-       "      <td>a81406be-c304-4838-ad11-71b3541162af</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33893764</th>\n",
-       "      <td>249520</td>\n",
-       "      <td>8ba5aeae-c11b-4d9e-95c2-2f68a95fc2f5</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33892910</th>\n",
-       "      <td>249568</td>\n",
-       "      <td>efffb212-04de-4b7c-880f-67529cec1451</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33892983</th>\n",
-       "      <td>249568</td>\n",
-       "      <td>f82bc038-5300-4f96-8d30-c3c0aa670556</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33839319</th>\n",
-       "      <td>235592</td>\n",
-       "      <td>098e95c5-fd8e-4074-8cda-131661575172</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47879830</th>\n",
-       "      <td>723521</td>\n",
-       "      <td>54bc9bf4-c465-4e73-8ea4-a870bfc4399b</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58390365</th>\n",
-       "      <td>686538</td>\n",
-       "      <td>1092ef86-522b-4cda-90f2-2ca5dd96f976</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33839433</th>\n",
-       "      <td>235592</td>\n",
-       "      <td>262f45e2-6565-42eb-a92f-be9af54f0e93</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62431715</th>\n",
-       "      <td>427611</td>\n",
-       "      <td>a9c95412-69d6-4a41-b283-e16f87931d35</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1000 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          item_id                               user_id  rank_ctb\n",
-       "33894709   190308  42c59b1f-7e5f-498a-b796-cdb96f1c74f2         1\n",
-       "33893901   249520  a81406be-c304-4838-ad11-71b3541162af         1\n",
-       "33893764   249520  8ba5aeae-c11b-4d9e-95c2-2f68a95fc2f5         1\n",
-       "33892910   249568  efffb212-04de-4b7c-880f-67529cec1451         1\n",
-       "33892983   249568  f82bc038-5300-4f96-8d30-c3c0aa670556         1\n",
-       "...           ...                                   ...       ...\n",
-       "33839319   235592  098e95c5-fd8e-4074-8cda-131661575172         1\n",
-       "47879830   723521  54bc9bf4-c465-4e73-8ea4-a870bfc4399b         1\n",
-       "58390365   686538  1092ef86-522b-4cda-90f2-2ca5dd96f976         1\n",
-       "33839433   235592  262f45e2-6565-42eb-a92f-be9af54f0e93         1\n",
-       "62431715   427611  a9c95412-69d6-4a41-b283-e16f87931d35         1\n",
-       "\n",
-       "[1000 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "next(gen).to_pandas()"
+    "def nth_item(generator, n):\n",
+    "    return next(islice(generator, n, n+1), None)"
    ]
   },
   {
