--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,22 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import duckdb\n",
     "import pandas as pd\n",
     "import pyarrow.parquet as pq\n",
-    "from itertools import islice\n",
+    "from itertools import islice, tee\n",
     "\n",
-    "# Connect to the DuckDB database\n",
-    "conn = duckdb.connect(':memory:')"
+    "from src.core import Data, Reader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,11 +59,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv = pd.read_csv(\"/home/anadirov/Documents/kvi_table.csv\", chunksize=5)"
+    "def count_items(generator):\n",
+    "    return sum(1 for _ in generator)\n",
+    "\n",
+    "def count_and_copy(generator):\n",
+    "    gen_copy, gen_count = tee(generator)\n",
+    "    count = sum(1 for _ in gen_count)\n",
+    "    return gen_copy, count\n",
+    "\n",
+    "\n",
+    "# count_and_copy(gen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = df.query(\"data\", \"select * from data limit 10000\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bats = r.to_arrow_table().to_batches(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "big = Data(path = d, \n",
+    "           virtual_table_name = \"data\", \n",
+    "           query = \"select item_id, __index_level_0__ from data order by __index_level_0__\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['item_id', 'user_id', 'rank_ctb', '__index_level_0__']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "big.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = big.search('700506', \"item_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.query(\"data\",\n",
+    "#          \"select item_id, __index_level_0__ from data order by __index_level_0__\")\\\n",
+    "#          .query(\"data_\", \n",
+    "#                 \"\"\"SELECT * \n",
+    "#                     FROM data\n",
+    "#                     WHERE CAST(item_id as VARCHAR) ILIKE '%700506%'\n",
+    "#                 \"\"\")"
    ]
   },
   {
@@ -87,15 +168,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# duckdb.from_df(i.to_pandas()).query(\"data\", \"select ProductName from  data\")"
-   ]
   }
  ],
  "metadata": {
