--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,17 @@
     "import pyarrow.parquet as pq\n",
     "from itertools import islice, tee\n",
     "\n",
-    "from src.core import Data, Reader"
+    "# from src.core import Data, Reader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "d = \"/home/anadirov/Documents/big.parquet\"\n",
+    "d2 = \"/home/anadirov/Documents/local_dwh/mp_all_offers_prod.parquet\"\n",
     "# pd_df = pd.read_parquet(d)\n",
     "\n",
     "# q = f\"\"\"\n",
@@ -30,26 +31,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = duckdb.read_parquet(d)"
+    "df = duckdb.read_parquet(d)\n",
+    "df2 = duckdb.read_parquet(d2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parquet_file = pq.ParquetFile(d)\n",
-    "gen = parquet_file.iter_batches(batch_size=1000)"
+    "# parquet_file = pq.ParquetFile(d)\n",
+    "# gen = parquet_file.iter_batches(batch_size=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,60 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = df.query(\"data\", \"select * from data limit 10000\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bats = r.to_arrow_table().to_batches(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "big = Data(path = d, \n",
-    "           virtual_table_name = \"data\", \n",
-    "           query = \"select item_id, __index_level_0__ from data order by __index_level_0__\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['item_id', 'user_id', 'rank_ctb', '__index_level_0__']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "big.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r = big.search('700506', \"item_id\")"
+    "# r = df.query(\"data\", \"select * from data limit 10000\")"
    ]
   },
   {
@@ -139,13 +92,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.query(\"data\",\n",
-    "#          \"select item_id, __index_level_0__ from data order by __index_level_0__\")\\\n",
-    "#          .query(\"data_\", \n",
-    "#                 \"\"\"SELECT * \n",
-    "#                     FROM data\n",
-    "#                     WHERE CAST(item_id as VARCHAR) ILIKE '%700506%'\n",
-    "#                 \"\"\")"
+    "# bats = r.to_arrow_table().to_batches(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# big = Data(path = d, \n",
+    "#            virtual_table_name = \"data\", \n",
+    "#            query = \"select item_id, __index_level_0__ from data order by __index_level_0__\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from io import StringIO\n",
+    "import sys, os\n",
+    "\n",
+    "def render_df_info(duckdf: duckdb.DuckDBPyRelation) -> str:\n",
+    "    \"\"\" returns md like formatted df.info \"\"\"\n",
+    "    shape = duckdf.shape\n",
+    "\n",
+    "    output_buffer = StringIO()\n",
+    "    sys.stdout = output_buffer\n",
+    "    duckdf.describe().show(max_width=10**19)\n",
+    "    sys.stdout = sys.__stdout__\n",
+    "    descr = output_buffer.getvalue()\n",
+    "\n",
+    "    h = f\"### Rows: {shape[0]}, Columns: {shape[1]}\\n{'-'*50}\\n\"\n",
+    "    try:\n",
+    "        lines = descr.strip().split(\"\\n\")\n",
+    "        headers = lines[1].strip(\"│\").split(\"│\")\n",
+    "        headers = [header.strip() for header in headers]\n",
+    "        types = lines[2].strip(\"│\").split(\"│\")\n",
+    "        types = [t.strip() for t in types]\n",
+    "        data_lines = lines[4:-1]\n",
+    "        data = []\n",
+    "        for line in data_lines:\n",
+    "            row = line.strip(\"│\").split(\"│\")\n",
+    "            row = [item.strip() for item in row]\n",
+    "            data.append(row)\n",
+    "\n",
+    "        # Build the markdown table\n",
+    "        markdown_table = \"| \" + \" | \".join(headers) + \" |\\n\"\n",
+    "        markdown_table += \"|-\" + \"-|-\".join([\"-\" * len(header) for header in headers]) + \"-|\\n\"\n",
+    "        markdown_table += \"| \" + \" | \".join(types) + \" |\\n\"\n",
+    "        for row in data:\n",
+    "            markdown_table += \"| \" + \" | \".join(row) + \" |\\n\"\n",
+    "\n",
+    "        return h + markdown_table\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        return h\n",
+    "\n",
+    "\n",
+    "r = render_df_info(df2)"
    ]
   },
   {
